--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
         <header>
             <h1>Email Templates Collection</h1>
             <p class="subtitle">Professional email templates</p>
+            <div style="margin-top: 20px;">
+                <a href="sections/overview.html" style="display: inline-block; padding: 12px 24px; background: linear-gradient(135deg, #00BCD4 0%, #00ACC1 100%); color: #ffffff; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease;">
+                    Browse Sections Library →
+                </a>
+            </div>
         </header>
         
         <div class="templates-grid">
