--- a/sections/overview.html
+++ b/sections/overview.html
@@ -467,7 +467,7 @@
             const card = document.createElement('div');
             card.className = 'section-card';
             
-            const fullPath = `sections/${section.path}`;
+            const fullPath = `${section.path}`;
             
             // Create card structure
             card.innerHTML = `
