--- a/sections/overview.html
+++ b/sections/overview.html
@@ -462,9 +462,29 @@
                     description: 'Logo and navigation preheader'
                 },
                 {
+                    name: 'Preheader Travel',
+                    path: 'headers/preheader-travel-1.html',
+                    description: 'Simple preheader with view online link'
+                },
+                {
                     name: 'Header AVORA',
                     path: 'headers/header-avora-1.html',
                     description: 'Header with logo and navigation menu'
+                },
+                {
+                    name: 'Header Travel Logo',
+                    path: 'headers/header-travel-logo.html',
+                    description: 'Centered logo header'
+                },
+                {
+                    name: 'Header Movie Logo',
+                    path: 'headers/header-movie-logo.html',
+                    description: 'Dark-themed movie logo header'
+                },
+                {
+                    name: 'Header Party Logo',
+                    path: 'headers/header-party-logo.html',
+                    description: 'Party invitation header with logo and banner'
                 }
             ],
             heroes: [
@@ -472,6 +492,21 @@
                     name: 'Hero Fall Sale',
                     path: 'heroes/hero-avora-fall-sale.html',
                     description: 'Hero section with background image and sale promotion'
+                },
+                {
+                    name: 'Hero Travel Banner',
+                    path: 'heroes/hero-travel-banner.html',
+                    description: 'Full-width banner image hero section'
+                },
+                {
+                    name: 'Hero Movie Advent',
+                    path: 'heroes/hero-movie-advent.html',
+                    description: 'Movie advent calendar hero with day counter'
+                },
+                {
+                    name: 'Hero Party Banner',
+                    path: 'heroes/hero-party-banner.html',
+                    description: 'Animated party banner with event title'
                 }
             ],
             products: [
@@ -479,6 +514,16 @@
                     name: 'Product Grid 3 Column',
                     path: 'products/product-grid-3-column.html',
                     description: 'Three-column product grid with images and prices'
+                },
+                {
+                    name: 'Product Showcase 3 Column Travel',
+                    path: 'products/product-showcase-3-column-travel.html',
+                    description: 'Three-column travel destination showcase with images'
+                },
+                {
+                    name: 'Product Grid Movie Calendar',
+                    path: 'products/product-grid-movie-calendar.html',
+                    description: 'Five-column movie calendar grid layout'
                 }
             ],
             cta: [
@@ -486,6 +531,11 @@
                     name: 'CTA Button Black',
                     path: 'cta/cta-button-black.html',
                     description: 'Black call-to-action button section'
+                },
+                {
+                    name: 'Promo Box Travel',
+                    path: 'cta/promo-box-travel.html',
+                    description: 'Promotional box with discount offer and CTA button'
                 }
             ],
             testimonials: [
@@ -500,6 +550,11 @@
                     name: 'Blog 2 Column',
                     path: 'blog/blog-stock-2-column.html',
                     description: 'Two-column blog post showcase'
+                },
+                {
+                    name: 'Blog Travel 2 Column',
+                    path: 'blog/blog-travel-2-column.html',
+                    description: 'Two-column travel blog section with image and CTA'
                 }
             ],
             footer: [
@@ -507,9 +562,29 @@
                     name: 'Footer AVORA Complete',
                     path: 'footer/footer-avora-complete.html',
                     description: 'Complete footer with social links, contact info, and unsubscribe'
+                },
+                {
+                    name: 'Footer Travel Contact',
+                    path: 'footer/footer-travel-contact.html',
+                    description: 'Contact footer with location and contact information'
+                },
+                {
+                    name: 'Footer Travel Unsubscribe',
+                    path: 'footer/footer-travel-unsubscribe.html',
+                    description: 'Footer with unsubscribe link and social media icons'
                 }
             ],
             misc: [
+                {
+                    name: 'Movie Detail Section',
+                    path: 'misc/movie-detail-section.html',
+                    description: 'Movie information section with poster, details, and action buttons'
+                },
+                {
+                    name: 'Event Details Section',
+                    path: 'misc/event-details-section.html',
+                    description: 'Event invitation with date, time, location, and confirmation button'
+                },
                 {
                     name: 'Features 4 Column',
                     path: 'misc/features-4-column.html',
