--- a/sections/heroes/hero-travel-banner.html
+++ b/sections/heroes/hero-travel-banner.html
@@ -6,7 +6,7 @@
                 <td class="by bu" valign="top" align="center" style="padding:0;Margin:0;width:600px">
                     <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;position:relative"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="#" alt="Christmas travel" title="Christmas travel" width="100%" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
+                            <td align="center" style="padding:0;Margin:0;position:relative"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="assets/bannerImgGuid/image17067007694476745.png" alt="Christmas travel" title="Christmas travel" width="100%" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a></td>
                         </tr>
                     </tbody></table></td>
             </tr>
