--- a/sections/heroes/hero-party-banner.html
+++ b/sections/heroes/hero-party-banner.html
@@ -3,7 +3,7 @@
     <td align="center" valign="top" style="padding:0;Margin:0;width:600px">
         <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tbody><tr>
-                <td align="center" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="#" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="600"></td>
+                <td align="center" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_ae95623e1f776c00064181ce1da8b630b7f1bdd9a01be0b6416b036edc6ca534/banner_mM9.gif" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="600"></td>
             </tr>
         </tbody></table></td>
 </tr>
