--- a/sections/misc/event-details-section.html
+++ b/sections/misc/event-details-section.html
@@ -7,7 +7,7 @@
                 <td class="by" align="center" style="padding:0;Margin:0;width:115px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="right" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="#" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
+                            <td align="right" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/3242342x.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
                         </tr>
                     </tbody></table></td>
                 <td class="bt" style="padding:0;Margin:0;width:20px"></td>
@@ -42,7 +42,7 @@
                 <td class="by" align="center" style="padding:0;Margin:0;width:115px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="left" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="#" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
+                            <td align="left" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/2323212x.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
                         </tr>
                     </tbody></table></td>
             </tr>
