--- a/sections/products/product-showcase-3-column-travel.html
+++ b/sections/products/product-showcase-3-column-travel.html
@@ -7,7 +7,7 @@
                 <td class="by bu" align="center" style="padding:0;Margin:0;width:167px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="#" alt="Christmas" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="167" title="Christmas"></a></td>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/sideviewmancarryingwoman.jpg" alt="Christmas" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="167" title="Christmas"></a></td>
                         </tr>
                     </tbody></table></td>
                 <td class="bt" style="padding:0;Margin:0;width:20px"></td>
@@ -18,7 +18,7 @@
                 <td align="center" class="bu" style="padding:0;Margin:0;width:167px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img src="#" alt="Tree" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50" title="Tree" class="b_image"></a></td>
+                            <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/pinetree.png" alt="Tree" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50" title="Tree" class="b_image"></a></td>
                         </tr>
                         <tr>
                             <td align="center" class="ck" style="padding:0;Margin:0"><h2 style="Margin:0;line-height:28.8px;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;font-size:24px;font-style:normal;font-weight:normal;color:#333333"><strong class="b_title">Hot Offers</strong></h2></td>
@@ -44,7 +44,7 @@
                 <td align="center" style="padding:0;Margin:0;width:166px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="#" alt="Christmas" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="166" title="Christmas"></a></td>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img" src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/sideviewsmileywomanholdinggift.jpg" alt="Christmas" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="166" title="Christmas"></a></td>
                         </tr>
                     </tbody></table></td>
             </tr>
