--- a/sections/cta/promo-box-travel.html
+++ b/sections/cta/promo-box-travel.html
@@ -38,7 +38,7 @@
                 <td align="left" style="padding:0;Margin:0;width:353px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img b_image" src="#" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="353"></a></td>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img b_image" src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/fullshotcouplewritingsand.jpg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="353"></a></td>
                         </tr>
                     </tbody></table></td>
             </tr>
