--- a/sections/headers/preheader-avora-1.html
+++ b/sections/headers/preheader-avora-1.html
@@ -1,3 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Preheader Avora 1</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            margin: 0;
+            padding: 20px;
+            background: #f5f5f5;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
+        }
+        .email-container {
+            max-width: 600px;
+            width: 100%;
+            margin: 0 auto;
+            background: #ffffff;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .email-container table {
+            max-width: 600px !important;
+            width: 100% !important;
+        }
+        table {
+            width: 100% !important;
+            max-width: 600px !important;
+            border-collapse: collapse;
+        }
+        table[width] {
+            max-width: 600px !important;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border: 0;
+        }
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+        table[role="presentation"] {
+            border-collapse: collapse;
+            mso-table-lspace: 0pt;
+            mso-table-rspace: 0pt;
+            max-width: 600px !important;
+        }
+        td {
+            padding: 0;
+        }
+        .esdev-mso-table {
+            max-width: 600px !important;
+            width: 100% !important;
+        }
+    </style>
+</head>
+<body>
+    <div class="email-container">
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #ffffff;">
 <!-- Top Banner / Preheader -->
 <tr>
     <td class="mobile-padding" style="padding: 15px 20px; background-color: #ffffff; border-bottom: 1px solid #e0e0e0;">
@@ -13,4 +83,7 @@
         </table>
     </td>
 </tr>
-
+        </table>
+    </div>
+</body>
+</html>
