--- a/sections/footer/footer-travel-contact.html
+++ b/sections/footer/footer-travel-contact.html
@@ -25,7 +25,7 @@
             max-width: 600px;
             width: 100%;
             margin: 0 auto;
-            background: #ffffff;
+            background: #333333;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .email-container table {
@@ -67,8 +67,7 @@
 </head>
 <body>
     <div class="email-container">
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #ffffff;">
-<!-- Footer with Contact Information -->
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #333333;">
 <tr>
     <td align="left" style="padding:30px;Margin:0">
         <!--[if mso]><table style="width:540px" cellpadding="0" cellspacing="0"><tr><td style="width:260px" valign="top"><![endif]-->
@@ -79,39 +78,6 @@
                         <tbody><tr>
                             <td align="left" class="cl" style="padding:0;Margin:0"><h3 style="Margin:0;line-height:24px;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;font-size:20px;font-style:normal;font-weight:normal;color:#ffffff">Locations</h3></td>
                         </tr>
-                        <tr>
-                            <td align="left" style="padding:0;Margin:0;padding-top:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;line-height:28px;color:#FFFFFF;font-size:14px">7337 Crystal Chase,&nbsp;</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;line-height:28px;color:#FFFFFF;font-size:14px">Alta Vista, Texas</p></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:260px" valign="top"><![endif]-->
-        <table class="cg" cellspacing="0" cellpadding="0" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-            <tbody><tr>
-                <td align="left" style="padding:0;Margin:0;width:260px">
-                    <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="left" class="cl" style="padding:0;Margin:0"><h3 style="Margin:0;line-height:24px;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;font-size:20px;font-style:normal;font-weight:normal;color:#ffffff">Contacts</h3></td>
-                        </tr>
-                        <tr>
-                            <td style="padding:0;Margin:0">
-                                <table cellpadding="0" cellspacing="0" width="100%" class="bq" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                    <tbody><tr class="links-images-left">
-                                        <td align="LEFT" valign="top" width="100%" id="esd-menu-id-0" style="Margin:0;padding-left:5px;padding-right:5px;padding-top:10px;padding-bottom:5px;border:0"><a target="_blank" href="tel:000 123-456-789" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;display:block;font-family:Sora, Arial, sans-serif;color:#ffffff;font-size:14px;font-weight:normal"><img src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/phone_1.png" alt="000 123-456-789" title="000 123-456-789" align="absmiddle" width="22" style="display:inline-block !important;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-right:5px;vertical-align:middle;font-size:12px">000 123-456-789</a></td>
-                                    </tr>
-                                </tbody></table></td>
-                        </tr>
-                        <tr>
-                            <td style="padding:0;Margin:0">
-                                <table cellpadding="0" cellspacing="0" width="100%" class="bq" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                    <tbody><tr class="links-images-left">
-                                        <td align="LEFT" valign="top" width="100%" id="esd-menu-id-0" style="Margin:0;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:10px;border:0"><a target="_blank" href="mailto:info@travel.com" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;display:block;font-family:Sora, Arial, sans-serif;color:#ffffff;font-size:14px;font-weight:normal"><img src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/envelope_9.png" alt="info@travel.com" title="info@travel.com" align="absmiddle" width="22" style="display:inline-block !important;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-right:5px;vertical-align:middle">info@travel.com</a></td>
-                                    </tr>
-                                </tbody></table></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td></tr></table><![endif]--></td>
-</tr>
         </table>
     </div>
 </body>
