--- a/sections/misc/event-details-section.html
+++ b/sections/misc/event-details-section.html
@@ -25,7 +25,7 @@
             max-width: 600px;
             width: 100%;
             margin: 0 auto;
-            background: #ffffff;
+            background: #00533E;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .email-container table {
@@ -67,8 +67,7 @@
 </head>
 <body>
     <div class="email-container">
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #ffffff;">
-<!-- Event Details Section -->
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #00533E;">
 <tr>
     <td class="g f" align="left" style="Margin:0;padding-bottom:15px;padding-top:20px;padding-left:20px;padding-right:20px">
         <!--[if mso]><table style="width:560px" cellpadding="0" cellspacing="0"><tr><td style="width:135px" valign="top"><![endif]-->
@@ -77,67 +76,8 @@
                 <td class="by" align="center" style="padding:0;Margin:0;width:115px">
                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="right" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/3242342x.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
+                            <td align="right" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="//assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/3242342x.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
                         </tr>
-                    </tbody></table></td>
-                <td class="bt" style="padding:0;Margin:0;width:20px"></td>
-            </tr>
-        </tbody></table><!--[if mso]></td><td style="width:290px" valign="top"><![endif]-->
-        <table cellpadding="0" cellspacing="0" class="cf" align="left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-            <tbody><tr>
-                <td align="center" style="padding:0;Margin:0;width:290px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="left" style="padding:0;Margin:0">
-                                <table border="1" cellspacing="1" cellpadding="1" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:100%;border-color:#dd4e40" class="es-table" role="presentation">
-                                    <tbody><tr>
-                                        <td align="center" width="50%" style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Montserrat, sans-serif;line-height:22px !important;color:#ff564e;font-size:22px !important"><strong>DEC</strong></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Montserrat, sans-serif;line-height:32px !important;color:#ff564e;font-size:40px !important"><strong>25</strong></p></td>
-                                        <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Montserrat, sans-serif;line-height:25px !important;color:#ff564e;font-size:25px !important"><strong>7:30</strong></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Montserrat, sans-serif;line-height:24px !important;color:#ff564e;font-size:30px !important"><strong>PM</strong></p></td>
-                                    </tr>
-                                </tbody></table></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top" style="padding:0;Margin:0;width:290px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;padding-top:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Montserrat, sans-serif;line-height:22.5px;color:#3B6650;font-size:15px"><em>Jolly Holly Restaurant, SN</em></p></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:115px" valign="top"><![endif]-->
-        <table cellpadding="0" cellspacing="0" class="cg" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-            <tbody><tr class="bs">
-                <td class="by" align="center" style="padding:0;Margin:0;width:115px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="left" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/2323212x.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="100"></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td></tr></table><![endif]--></td>
-</tr>
-<tr>
-    <td align="left" style="Margin:0;padding-top:15px;padding-bottom:15px;padding-left:20px;padding-right:20px">
-        <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-            <tbody><tr>
-                <td align="center" valign="top" style="padding:0;Margin:0;width:560px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0"><!--[if mso]><a href="#/" target="_blank" hidden>
-   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" esdevVmlButton href="#/" 
-               style="height:44px; v-text-anchor:middle; width:154px" arcsize="50%" stroke="f"  fillcolor="#09664e">
-       <w:anchorlock></w:anchorlock>
-       <center style='color:#ffffff; font-family:arial, "helvetica neue", helvetica, sans-serif; font-size:14px; font-weight:700; line-height:14px;  mso-text-raise:1px'>CONFIRM</center>
-   </v:roundrect></a>
-<![endif]--><!--[if !mso]><!-- --><span class="msohide ci" style="border-style:solid;border-color:#ff564e;background:#008c7c;border-width:0px;display:inline-block;border-radius:30px;width:auto;mso-hide:all"><a href="#/" class="ch" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:14px;padding:14px 35px 14px 35px;display:inline-block;background:#09664E;border-radius:30px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:bold;font-style:normal;line-height:16.8px;width:auto;text-align:center;mso-padding-alt:0;mso-border-alt:10px solid #09664E">CONFIRM</a></span><!--<![endif]--></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table></td>
-</tr>
-</tr>
         </table>
     </div>
 </body>
