--- a/sections/cta/promo-box-travel.html
+++ b/sections/cta/promo-box-travel.html
@@ -25,7 +25,7 @@
             max-width: 600px;
             width: 100%;
             margin: 0 auto;
-            background: #ffffff;
+            background: #CDC9C4;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .email-container table {
@@ -67,8 +67,7 @@
 </head>
 <body>
     <div class="email-container">
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #ffffff;">
-<!-- Promotional Box with CTA Button -->
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #CDC9C4;">
 <tr>
     <td align="left" style="padding:0;Margin:0;padding-top:30px;padding-left:30px;padding-right:30px">
         <!--[if mso]><table style="width:540px" cellpadding="0" cellspacing="0"><tr><td style="width:167px" valign="top"><![endif]-->
@@ -79,41 +78,6 @@
                         <tbody><tr>
                             <td align="center" class="ck" style="Margin:0;padding-bottom:5px;padding-left:10px;padding-right:10px;padding-top:15px"><h1 style="Margin:0;line-height:36px;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;font-size:30px;font-style:normal;font-weight:normal;color:#333333"><strong class="b_title">Up to 50% Off</strong></h1></td>
                         </tr>
-                        <tr>
-                            <td align="center" style="Margin:0;padding-bottom:5px;padding-top:10px;padding-left:20px;padding-right:20px;font-size:0">
-                                <table border="0" width="90%" height="100%" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:90% !important;display:inline-table" role="presentation">
-                                    <tbody><tr>
-                                        <td style="padding:0;Margin:0;border-bottom:2px solid #333333;background:unset;height:1px;width:100%;margin:0px"></td>
-                                    </tr>
-                                </tbody></table></td>
-                        </tr>
-                        <tr>
-                            <td align="center" style="padding:10px;Margin:0"><p class="b_description" style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:Sora, Arial, sans-serif;line-height:21px;color:#333333;font-size:14px">Unbelievable discounts on select travel packages</p></td>
-                        </tr>
-                        <tr>
-                            <td align="center" bgcolor="#A1060A" style="padding:0;Margin:0">
-                                <!--[if mso]><a href="#" target="_blank" hidden>
-   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" esdevVmlButton href="#" 
-               style="height:41px; v-text-anchor:middle; width:161px" arcsize="0%" stroke="f"  fillcolor="#a1060a">
-       <w:anchorlock></w:anchorlock>
-       <center style='color:#ffffff; font-family:arial, "helvetica neue", helvetica, sans-serif; font-size:15px; font-weight:400; line-height:15px;  mso-text-raise:1px'>Explore Now</center>
-   </v:roundrect></a>
-<![endif]--><!--[if !mso]><!-- --><span class="msohide ci" style="border-style:solid;border-color:#2CB543;background:#A1060A;border-width:0px;display:inline-block;border-radius:0px;width:auto;mso-hide:all"><a href="#" class="ch" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:18px;display:inline-block;background:#A1060A;border-radius:0px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:21.6px;width:auto;text-align:center;padding:10px 20px 10px 20px;mso-padding-alt:0;mso-border-alt:10px solid #A1060A">Explore Now</a></span><!--<![endif]--></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:353px" valign="top"><![endif]-->
-        <table cellpadding="0" cellspacing="0" class="cg" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-            <tbody><tr>
-                <td align="left" style="padding:0;Margin:0;width:353px">
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                        <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#333333;font-size:14px"><img class="adapt-img b_image" src="/assets/CABINET_57bcf646c0f94aed670a35e026f3ef4a376371a1a8e9e35fb3cf40a0daef590a/fullshotcouplewritingsand.jpg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="353"></a></td>
-                        </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table><!--[if mso]></td></tr></table><![endif]--></td>
-</tr>
         </table>
     </div>
 </body>
