--- a/sections/headers/header-party-logo.html
+++ b/sections/headers/header-party-logo.html
@@ -25,7 +25,7 @@
             max-width: 600px;
             width: 100%;
             margin: 0 auto;
-            background: #ffffff;
+            background: #09664e;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .email-container table {
@@ -67,8 +67,7 @@
 </head>
 <body>
     <div class="email-container">
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #ffffff;">
-<!-- Header with Party Logo -->
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width: 600px; width: 100%; background-color: #09664e;">
 <tr>
     <td align="left" style="Margin:0;padding-left:20px;padding-right:20px;padding-top:25px;padding-bottom:25px">
         <table cellspacing="0" cellpadding="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
@@ -76,26 +75,8 @@
                 <td align="left" style="padding:0;Margin:0;width:560px">
                     <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                         <tbody><tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/logo1.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="170"></td>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="//assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/logo1.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="170"></td>
                         </tr>
-                    </tbody></table></td>
-            </tr>
-        </tbody></table></td>
-    </tr>
-    <tr>
-        <td align="left" style="padding:0;Margin:0;padding-bottom:10px">
-            <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                <tbody><tr>
-                    <td align="center" valign="top" style="padding:0;Margin:0;width:600px">
-                        <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tbody><tr>
-                                <td align="center" style="padding:0;Margin:0;font-size:0px"><img class="adapt-img" src="/assets/CABINET_3bd3f11f2729dbf2d58851438827b203c0168bd36a81f0ccd038adedcd299bae/453222.png" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="600"></td>
-                            </tr>
-                        </tbody></table></td>
-                </tr>
-            </tbody></table></td>
-    </tr>
-</tr>
         </table>
     </div>
 </body>
