newsletter 5 modular section

--- a/sections/overview.html
+++ b/sections/overview.html
@@ -595,6 +595,16 @@
                     name: 'Header AVORA',
                     path: 'headers/header-avora-1.html',
                     description: 'Header with logo and navigation menu'
+                },
+                {
+                    name: 'Preheader Travel',
+                    path: 'headers/preheader-travel-1.html',
+                    description: 'Simple preheader with view online link'
+                },
+                {
+                    name: 'Header Travel Logo',
+                    path: 'headers/header-travel-logo.html',
+                    description: 'Centered logo header with white background'
                 }
             ],
             heroes: [
@@ -602,6 +612,11 @@
                     name: 'Hero Fall Sale',
                     path: 'heroes/hero-avora-fall-sale.html',
                     description: 'Hero section with background image and sale promotion'
+                },
+                {
+                    name: 'Hero Travel Banner',
+                    path: 'heroes/hero-travel-banner.html',
+                    description: 'Full-width banner image hero section with white background'
                 }
             ],
             products: [
@@ -609,6 +624,11 @@
                     name: 'Product Grid 3 Column',
                     path: 'products/product-grid-3-column.html',
                     description: 'Three-column product grid with images and prices'
+                },
+                {
+                    name: 'Product Showcase 3 Column Travel',
+                    path: 'products/product-showcase-3-column-travel.html',
+                    description: 'Three-column travel destination showcase with images and CTA buttons'
                 }
             ],
             cta: [
@@ -616,6 +636,11 @@
                     name: 'CTA Button Black',
                     path: 'cta/cta-button-black.html',
                     description: 'Black call-to-action button section'
+                },
+                {
+                    name: 'Promo Box Travel',
+                    path: 'cta/promo-box-travel.html',
+                    description: 'Promotional box with discount offer, beige background, and CTA button'
                 }
             ],
             testimonials: [
@@ -630,6 +655,11 @@
                     name: 'Blog 2 Column',
                     path: 'blog/blog-stock-2-column.html',
                     description: 'Two-column blog post showcase'
+                },
+                {
+                    name: 'Blog Travel 2 Column',
+                    path: 'blog/blog-travel-2-column.html',
+                    description: 'Two-column travel blog section with image and CTA button'
                 }
             ],
             footer: [
@@ -637,6 +667,16 @@
                     name: 'Footer AVORA Complete',
                     path: 'footer/footer-avora-complete.html',
                     description: 'Complete footer with social links, contact info, and unsubscribe'
+                },
+                {
+                    name: 'Footer Travel Contact',
+                    path: 'footer/footer-travel-contact.html',
+                    description: 'Contact footer with location and contact information, red background'
+                },
+                {
+                    name: 'Footer Travel Unsubscribe',
+                    path: 'footer/footer-travel-unsubscribe.html',
+                    description: 'Footer with unsubscribe link and social media icons, dark background'
                 }
             ],
             misc: [
