--- a/sections/footer/footer-travel-unsubscribe.html
+++ b/sections/footer/footer-travel-unsubscribe.html
@@ -43,8 +43,8 @@
             </tbody></table><!--[if mso]></td><td style="width:20px"></td><td style="width:198px" valign="top"><![endif]-->
             <table cellpadding="0" cellspacing="0" class="cg" align="right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right;flex:0 0 auto;">
                 <tbody><tr>
-                    <td align="left" style="padding:0;Margin:0;width:198px">
-                        <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                    <td align="right" style="padding:0;Margin:0;width:198px">
+                        <table cellpadding="0" cellspacing="0" align="right" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;margin-left:auto;">
                             <tbody><tr>
                                 <td align="right" class="ck" style="padding:0;Margin:0;font-size:0">
                                     <table cellpadding="0" cellspacing="0" class="bp bo" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
