fix email container overview

--- a/sections/overview.html
+++ b/sections/overview.html
@@ -853,13 +853,12 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .email-container table {
-            max-width: 198px !important;
+            max-width: 600px !important;
             width: 100% !important;
         }
+            .email-container .footer-unsubscribe-wrapper {
         table { 
-            width: 100% !important;
-            max-width: 600px !important;
-            border-collapse: collapse;
+            max-width: 198px !important;
         }
         table[width] {
             max-width: 600px !important;
